# ord-api-cache

./: Makefile  README.md  config.yml  manifest_template.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
proxies/live/: Makefile
proxies/live/apiproxy/: ord-api-cache.xml
proxies/live/apiproxy/policies/: AssignMessage.CatchallErrorMessage.xml  AssignMessage.SetCacheTimeout.xml  ResponseCache.OrdApiCache.xml  ServiceCallout.CallHealthcheckEndpoint.xml  SpikeArrest.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/resources/jsc/: HealthCheck.SetResponse.js
proxies/live/apiproxy/targets/: ord.xml
