[project]
python = "^3.9"
name = "ord-api-cache"

[tool.poetry]
name = "ord-api-cache"
version = "0.0.1-alpha"
description = "ORD API Cache"

license = "MIT"

authors = [
    "API management"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/ord-api-cache"
homepage = "https://github.com/NHSDigital/ord-api-cache"

keywords = ["healthcare", "uk", "nhs"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.32"


[tool.poetry.group.dev.dependencies]
aiohttp = "^3.9.4"
coverage = "^5.3"
flake8 = "^3.7.9"
black = "^24.3.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
